# pocket_notebook

./: .gitignore  README.md  TODOS.txt  check.sh  clean.sh  constants.py  dateinfo.py  gencoverage.sh  holidays.yaml  makecheck.sh  makepdfs.sh  mypy.ini  notepaper.py  notepaper_test.py  pyproject.toml  requirements.txt  svg_gen.py  todo_date_math.py  todos.yaml  utils.py  yaml_load.py  yaml_load_test.py
